new: update dependencies & install sass-loader

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "proj-keychain",
   "version": "0.1.0",
   "private": true,
+  "author": "ronngb",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -24,6 +25,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^6.0.1",
+    "sass": "^1.43.4",
+    "sass-loader": "^10.2.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
