--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "4.6.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.7",
     "jquery": "^3.5.1",
