--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "author": "ronngb",
+  "homepage": "https://passvault-89989.web.app",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "npm run build && firebase deploy --only hosting"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
@@ -14,7 +16,6 @@
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
-    "dayjs": "^1.10.7",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
